# gata-data-prep

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  example.env  prepare.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml  release.yaml.txt
src/: dataset.py  db.py  tickets.py  utils.py
tests/: test_dataset.py  test_db.py  test_tickets.py  test_utils.py
