[project]
name = "gata-data-prep"
authors = [
    {name = "Dave Hall", email = "skwashd@gmail.com"},
]
description = "Prepare ML training datasets from Zendesk ticket data for Gata Router"
license = {text = "MIT"}

requires-python = "~=3.14.0"
dependencies = [
  "boto3==1.43.40",
  "pandas==3.0.3",
  "scikit-learn==1.9.0",
  "types-boto3[rds-data,s3,secretsmanager,ssm]==1.43.40",
]

readme = "README.md"

dynamic = ["version"]

[dependency-groups]
# Only used by the helper scripts in scripts/, not the container image.
scripts = [
  "zenpy==2.0.57",
]
dev = [
  "coverage==7.15.0",
  "moto==5.2.2",
  "pandas-stubs==3.0.3.260530",
  "pytest-mock==3.15.1",
  "pytest==9.1.1",
  "responses==0.26.2",
  "ruff==0.15.20",
  "ty==0.0.56",
]

[build-system]
requires = [
    "hatchling==1.30.1",
    "hatch-vcs==0.5.0",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
search_parent_directories = true

[tool.ruff.lint]
# Rules listed at https://github.com/charliermarsh/ruff#supported-rules
select = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN" ,"BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
ignore = ["D203", "D211", "D212", "E501", "F403", "F405"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["B", "D", "E", "F", "G", "I", "N", "S", "W", "ANN" ,"BLE", "C4", "C90", "DTZ", "ERA", "PLW", "PT", "RET", "RUF", "SIM", "TRY", "UP"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108"]

[tool.ty.src]
exclude = [
  "scripts/",
]
